# ide

./: CMakeLists.txt
src/: config.cpp  config.h  explorer.cpp  explorer.h  main.cpp  main_window.cpp  main_window.h  panel.cpp  panel.h  panel_item.cpp  panel_item.h  panel_tools.cpp  panel_tools.h  player.cpp  player.h  redactor.cpp  redactor.h  redactor_item.cpp  redactor_item.h  translator.cpp  welcome.cpp  welcome.h
src/ui/: button.cpp  button.h  dialog_window.cpp  dialog_window.h  label.cpp  label.h  line_edit.cpp  line_edit.h  widget.cpp  widget.h
src/utils/: explorer.cpp  explorer.h  translator.cpp  translator.h
styles/: dialog_window.css  dialog_window_button_common.css  dialog_window_button_left.css  dialog_window_button_right.css  editor_button.css  panel_tools.css  panel_tools_button.css  panel_tools_item.css  panel_tools_item_click.css  panel_tools_item_double_click.css  panel_tools_item_label.css  panel_tools_label.css  styles.h  widget.css
